cloudformation/create-securitygroup.yml
AWSTemplateFormatVersion: 2010-09-09

Description: create SecurityGroup for lecture10

Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - Label: 
          default: Name base
        Parameters: 
          - Namebase
      - Label: 
          default: Security Group Config
        Parameters: 
          - MyIp
    ParameterLabels: 
      MyIp: 
        default: your IP address

Parameters: 
  Namebase:
    Type: String
    Default: lecture10
  
  MyIp:
    Description: enter your IP address
    Type: String
    Default: ''

Resources: 
  # EC2用セキュリティグループ作成
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${Namebase}-EC2-SecurityGroup
      GroupName: !Sub ${Namebase}-EC2-SecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Sub ${MyIp}/32
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${Namebase}-EC2-SecurityGroup
      VpcId: !ImportValue VPCId

  # RDS用セキュリティグループ作成
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${Namebase}-RDS-SecurityGroup
      GroupName: !Sub ${Namebase}-RDS-SecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${Namebase}-RDS-SecurityGroup
      VpcId: !ImportValue VPCId
  
  # ALB用セキュリティグループ作成
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${Namebase}-ALB-SecurityGroup
      GroupName: !Sub ${Namebase}-ALB-SecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${Namebase}-ALB-SecurityGroup
      VpcId: !ImportValue VPCId
  
Outputs:
  EC2SecurityGroupId:
    Value: !Ref EC2SecurityGroup
    Export: 
      Name: EC2SecurityGroupId
  
  RDSSecurityGroupId:
    Value: !Ref RDSSecurityGroup
    Export: 
      Name: RDSSecurityGroupId
  
  ALBSecurityGroupId:
    Value: !Ref ALBSecurityGroup
    Export: 
      Name: ALBSecurityGroupId
